k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: egypt-tourism-chatbot
spec:
  selector:
    app: egypt-tourism-chatbot
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
